Improve login appearance

--- a/login/index.html
+++ b/login/index.html
@@ -15,7 +15,11 @@
             <label>Email</label>
           </div>
         </div>
-        <button class="btn vcenter" style="top: 60%" type="button"><span>Log In</span></button>
+        <a href="#">
+          <div class="btn vcenter" style="top: 60%">
+            <span>Log In</span>
+          </div>
+        </a>
       </form>
     </div>
   </body>
